--- a/src/app/components/Header/header.module.css
+++ b/src/app/components/Header/header.module.css
@@ -1,6 +1,7 @@
 .main_menu{
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: 30px;
   list-style: none;
   text-transform: uppercase;
@@ -8,4 +9,11 @@
 
 .bg{
   padding: 18px 0;
+  font-size: 14px;
+}
+
+.menu__item{
+  display: flex;
+  align-items: center;
+  gap: 5px;
 }
