chore: change brand logos

--- a/src/app/pages/wholesale/page.module.css
+++ b/src/app/pages/wholesale/page.module.css
@@ -314,11 +314,11 @@
 }
 
 .sber {
-  background-image: url(/Sberbank.png);
+  background-image: url(/sberbank.png);
 }
 
 .metro {
-  background-image: url(/SPb-metro.png)
+  background-image: url(/spb.png)
 }
 
 .zenit {
@@ -326,7 +326,7 @@
 }
 
 .mvideo {
-  background-image: url(/MVideo.png)
+  background-image: url(/mvideo.png)
 }
 
 .gazprom {
