--- a/src/app/components/MainPage/proposals.module.css
+++ b/src/app/components/MainPage/proposals.module.css
@@ -3,6 +3,7 @@
   height: 880px;
   padding: 25px;
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
   gap: 30px;
   /* justify-content: space-between; */
