fix: update pages style and update privacy-policy info

--- a/src/app/components/Header/header.module.css
+++ b/src/app/components/Header/header.module.css
@@ -5,7 +5,7 @@
 .main_menu{
   display: flex;
   align-items: center;
-  justify-content: left;
+  justify-content: center;
   gap: 30px;
   list-style: none;
   text-transform: uppercase;
