--- a/src/app/shared/ui/Breadcrumb/Breadcrumb.module.css
+++ b/src/app/shared/ui/Breadcrumb/Breadcrumb.module.css
@@ -4,6 +4,7 @@
   align-items: center;
   list-style: none;
   gap: 5px;
+  padding: 41px 0;
 }
 
 .listClasses{
@@ -11,5 +12,5 @@ font-size: 16px;
 }
 
 .itemClasses {
-  color: #4e9DD3;
+  color: var(--blue);
 }
