--- a/src/app/pages/wholesale/page.module.css
+++ b/src/app/pages/wholesale/page.module.css
@@ -167,7 +167,6 @@
 
 .wholesale-order {
   padding: 76px 0px 76px 0px;
-  background-color: #F7EBE5;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -361,4 +360,8 @@
   padding-left: 15px;
   font-size: 16px;
   color: rgba(41, 41, 41, 40%);
+}
+
+.bg {
+  background-color: #F7EBE5;
 }
