refactor: change class name

--- a/src/app/components/Brands/brands.module.css
+++ b/src/app/components/Brands/brands.module.css
@@ -31,7 +31,7 @@
   padding-top: 23px;
 }
 
-.wholesale-review__brands {
+.brands {
   display: flex;
   justify-content: space-around;
   width: 100%;
