--- a/src/app/corporate-gifts/corporate-gifts.module.css
+++ b/src/app/corporate-gifts/corporate-gifts.module.css
@@ -63,3 +63,105 @@
   font-size: 14px;
   line-height: 22px;
 }
+
+.gift-variants {
+  padding-bottom: 70px;
+  padding-top: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.minor-heading {
+  font-size: 30px;
+}
+
+.gifts-variants__container {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 40px;
+  width: 100%;
+}
+
+.gift-variant {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-around; */
+  align-items: center;
+  gap: 28px;
+  border: 1px solid #EDEDF0;
+  border-radius: 5px;
+  width: 271px;
+  height: 413px;
+}
+
+.gift-variant__pic {
+  width: 243px;
+  height: 192px;
+  margin-top: 22px;
+}
+
+.pic_threeMacaroons {
+  background: url(/CorporateGifts3Macaroons.png);
+}
+
+.pic_nineMacaroons {
+  background: url(/CorporateGifts9Macaroons.png);
+}
+
+.pic_fortyMacaroons {
+  background: url(/CorporateGifts40Macaroons.png);
+}
+
+.pic_seventyMacaroons {
+  background: url(/CorporateGifts70Macaroons.png);
+}
+
+.gift-variant__heading {
+  font-weight: 600;
+  font-size: 18px;
+  color: var(--dark-text);
+}
+
+.gift-variant__description {
+  font-weight: 400;
+  font-size: 14px;
+  color: var(--dark-text);
+  opacity: .8;
+  padding-top: 7px;
+}
+
+.separator {
+  border: 1px solid #EDEDF0;
+  width: 271px;
+  height: 0px;
+  margin-top: 53px;
+  margin-left: -21px;
+}
+
+.gift-variant__price {
+  font-weight: 600;
+  font-size: 18px;
+  color: var(--accent);
+  padding-top: 15px;
+}
+
+.gift-variant__text-content {
+  display: flex;
+  flex-direction: column;
+  padding-left: 21px;
+}
+
+.gift-variant__btn {
+  border-radius: 3px;
+  cursor: pointer;
+  border: none;
+  width: 254px;
+  height: 50px;
+  background: var(--accent);
+  font-weight: 600;
+  font-size: 14px;
+  text-align: center;
+  color: #FFF;
+  margin-top: 33px;
+}
